--- a/net-www/boa/ChangeLog
+++ b/net-www/boa/ChangeLog
@@ -1,7 +1,14 @@
 # ChangeLog for net-www/boa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/boa/ChangeLog,v 1.3 2002/04/12 17:04:43 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/boa/ChangeLog,v 1.4 2002/04/14 18:06:43 jnelson Exp $
 
+*boa-0.94.11-r2 (14 Apr 2002)
+
+  12 Apr 2002; Jon Nelson <jnelson@gentoo.org> boa-0.94.11-r1.ebuild :
+
+  Added Alias for /icons (/home/httpd/icons), and changed
+  Alias for /doc from /usr/doc to /usr/share/doc
+  
 *boa-0.94.11-r1 (12 Apr 2002)
 
   12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> boa-0.94.11-r1.ebuild :
