--- a/gnome-base/eel/ChangeLog
+++ b/gnome-base/eel/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/eel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.2 2002/03/10 08:40:00 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.3 2002/04/15 06:52:38 seemant Exp $
+
+*eel-1.0.2-r2 (14 Apr 2002)
+
+  14 Apr 2002; Seemant Kulleen <seemant@gentoo.org> eel-1.0.2-r2.ebuild :
+
+  Force recompilation against newer libpng
 
 *eel-1.0.2-r1 (10 Mar 2002)
 
