--- a/media-libs/glide-v3/ChangeLog
+++ b/media-libs/glide-v3/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/glide-v3
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/glide-v3/ChangeLog,v 1.3 2002/02/17 19:21:27 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/glide-v3/ChangeLog,v 1.4 2002/04/15 10:23:58 seemant Exp $
+
+*glide-v3-3.10-r2 (15 Apr 2002)
+
+  15 Apr 2002; Seemant Kulleen <seemant@gentoo.org> glide-v3-3.10-r2.ebuild :
+
+  Updated USE flag checking syntax
 
   17 Feb 2002; M.Schlemmer <azarah@gentoo.org> glide-v3-3.10-r2.ebuild :
 
