--- a/net-www/htdig/ChangeLog
+++ b/net-www/htdig/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-www/htdig
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/htdig/ChangeLog,v 1.3 2002/03/15 12:10:18 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/htdig/ChangeLog,v 1.4 2002/04/15 11:12:07 seemant Exp $
+
+*htdig-3.1.6 (15 Apr 2002)
+
+  15 Apr 2002; Seemant Kulleen <seemant@gentoo.org> htdig-3.1.6.ebuild
+  files/digest-htdig-3.1.6
+
+  Version bump. This puts the config files properly, etc etc. Needs heavy 
+  testing, though.
 
   9 Mar 2002; Dan Armak <danarmak@gentoo.org> changelog:
   
