--- a/net-mail/pine/ChangeLog
+++ b/net-mail/pine/ChangeLog
@@ -1,7 +1,15 @@
 # ChangeLog for net-mail/pine
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/pine/ChangeLog,v 1.2 2002/02/21 22:24:41 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/pine/ChangeLog,v 1.3 2002/04/15 20:14:57 jhhudso Exp $
 
+*pine-4.44-r4 (15 Apr 2002)
+
+  15 Apr 2002; Jared H. Hudson <jhhudso@gentoo.org> :
+
+  Changed the ebuild so that it no longer PROVIDEs virtual/imapUW or
+  the imap headers. These imap headers and static library will be provided
+  by net-mail/uw-imap exclusively now.
+	
 *pine-4.44-r1 (21 Feb 2002)
 
   21 Feb 2002; Grant Goodyear <g2boojum@gentoo.org> :
