--- a/net-mail/spruce/ChangeLog
+++ b/net-mail/spruce/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/spruce
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/spruce/ChangeLog,v 1.1 2002/02/01 21:53:34 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/spruce/ChangeLog,v 1.2 2002/04/16 01:00:28 seemant Exp $
+
+*spruce-0.7.6-r2 (15 Apr 2002)
+
+  15 Apr 2002; Seemant Kulleen <seemant@gentoo.org> spruce-0.7.6-r2.ebuild :
+
+  Changed the gpg USE toggle to the more general crypt USE toggle instead.
 
 *spruce-0.7.6-r2 (1 Feb 2002)
 
