--- a/net-im/gabber/ChangeLog
+++ b/net-im/gabber/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-im/gabber
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/gabber/ChangeLog,v 1.2 2002/03/27 21:32:24 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gabber/ChangeLog,v 1.3 2002/04/16 01:01:28 seemant Exp $
+
+*gabber-0.8.6-r1 (15 Apr 2002)
+
+  15 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gabber-0.8.6-r1.ebuild :
+
+  Changed the gpg USE flag to the more general crypt USE flag instead.
 
 *gabber-0.8.6-r1 (27 Mar 2002)
 
