--- a/net-mail/sylpheed-claws/ChangeLog
+++ b/net-mail/sylpheed-claws/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/sylpheed-claws
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed-claws/ChangeLog,v 1.5 2002/04/10 17:26:44 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed-claws/ChangeLog,v 1.6 2002/04/16 01:08:25 seemant Exp $
+
+*sylpheed-claws-0.7.4-r2 (15 Apr 2002)
+
+  15 Apr 2002; Seemant Kulleen <seemant@gentoo.org> sylpheed-claws-0.7.4-r2.ebuild :
+
+  Changed the gpg USE flag to the USE flag crypt instead, which is more general.
 
 *sylpheed-claws-0.7.4-r2 (10 Apr 2002)
 
