--- a/sys-apps/time/ChangeLog
+++ b/sys-apps/time/ChangeLog
@@ -1,9 +1,18 @@
 # ChangeLog for sys-apps/time
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/time/ChangeLog,v 1.1 2002/02/28 00:22:58 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/time/ChangeLog,v 1.2 2002/04/16 04:22:44 mkennedy Exp $
 
-time-1.7 (27 Feb 2002)
+*time-1.7-r1 (15 Apr 2002)
 
+  15 Apr 2002; Matthew Kennedy <mkennedy@gentoo.org>
+  time-1.7-r1.ebuild, ChangeLog, files/digest-time-1.7-r1 :
+
+  Resolves bug #1784 (thanks to set_48035@yahoo.com who submitted the
+  patch).
+
+
+*time-1.7 (27 Feb 2002)
+	
   27 Feb 2002; Bruce A. Locke <blocke@shivan.org> time-1.7.ebuild :
 
   Time ebuild contributed by naz@themoonsofjupiter.net (Michael M Nazaroff)
