--- a/sys-apps/parted/ChangeLog
+++ b/sys-apps/parted/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/parted
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/parted/ChangeLog,v 1.3 2002/03/30 01:35:57 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/parted/ChangeLog,v 1.4 2002/04/16 19:32:28 seemant Exp $
+
+*parted-1.4.24-r3 (16 Apr 2002)
+
+  16 Apr 2002; Seemant Kulleen <seemant@gentoo.org> parted-1.4.24-r3.ebuild :
+
+  Closes bug #1690 and related bugs.  Thanks to everyone for the patches and
+  fixes.
 
 *parted-1.4.24-r2 (29 Mar 2002)
 
