--- a/dev-java/blackdown-jdk/ChangeLog
+++ b/dev-java/blackdown-jdk/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for dev-java/blackdown-jdk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/ChangeLog,v 1.4 2002/04/09 22:06:58 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/ChangeLog,v 1.5 2002/04/17 04:19:32 rphillips Exp $
 
+*blackdown-jdk-1.3.1-r4 (16 Apr 2002)
+
+  16 Apr 2002; Ryan Phillips <rphillips@gentoo.org> blackdown-jdk-1.3.1-r4.ebuild files/digest-blackdown-jdk-1.3.1-r4:
+
+  Removed ROOTPATH from files/blackdown-fdk-1.3.1 (#1850)
+  
 *blackdown-jdk-1.3.1-r4 (09 Apr 2002)
 
   09 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> blackdown-jdk-1.3.1-r4.ebuild files/digest-blackdown-jdk-1.3.1-r4:
