--- a/app-misc/rox/ChangeLog
+++ b/app-misc/rox/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for app-misc/rox
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/rox/ChangeLog,v 1.3 2002/03/30 05:38:28 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/rox/ChangeLog,v 1.4 2002/04/17 05:33:54 rphillips Exp $
 
+*rox-1.2.0 (16 Apr 2002)
+
+  16 Apr 2002; Ryan Phillips <rphillips@shivan.org> rox-1.2.0.ebuild :
+
+  Updated ebuild to rox 1.2.0
+    
 *rox-1.1.8-r3 (30 Mar 2002)
 
   30 Mar 2002; Bruce A. Locke <blocke@shivan.org> rox-1.1.8-r3.ebuild :
