--- a/x11-misc/gkrellm-gnome/ChangeLog
+++ b/x11-misc/gkrellm-gnome/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/gkrellm-gnome
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gkrellm-gnome/ChangeLog,v 1.2 2002/04/14 14:00:07 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gkrellm-gnome/ChangeLog,v 1.3 2002/04/17 16:58:27 seemant Exp $
+
+  17 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gkrellm-gnome-0.1.ebuild :
+
+  Added gnome-libs to the DEPEND list
 
 *gkrellm-gnome-0.1 (14 Apr 2002)
 
