--- a/net-mail/squirrelmail/ChangeLog
+++ b/net-mail/squirrelmail/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for net-mail/squirrelmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/squirrelmail/ChangeLog,v 1.1 2002/02/01 21:53:34 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/squirrelmail/ChangeLog,v 1.2 2002/04/17 17:27:36 g2boojum Exp $
 
+*squirrelmail-1.2.5 (17 Apr 2002)
+
+  17 Apr 2002; Grant Goodyear <g2boojum@gentoo.org> :
+
+  New version.  Also moved HTTPDROOT to the new /home/httpd/ location.
+  
 *squirrelmail-1.2.4 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
