--- a/net-im/ickle/ChangeLog
+++ b/net-im/ickle/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/ickle
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/ickle/ChangeLog,v 1.1 2002/02/01 21:53:32 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ickle/ChangeLog,v 1.2 2002/04/17 21:27:07 spider Exp $
+
+*ickle-0.3.0 (17 Apr 2002)
+  17 Apr 2002; Spider <spider@gentoo.org> ickle-0.3.0.ebuild :
+  Updated with a libicq2000 dependency
+  the rest is copied from ickle 0.2.0 by Verwilst
 
 *ickle-0.2.2 (1 Feb 2002)
 
