--- a/net-im/ickle/ChangeLog
+++ b/net-im/ickle/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-im/ickle
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/ickle/ChangeLog,v 1.2 2002/04/17 21:27:07 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ickle/ChangeLog,v 1.3 2002/04/18 00:14:23 spider Exp $
+
+
+*ickle-0.3.0-r1 (18 Apr 2002)
+18 Apr 2002; Spider <spider@gentoo.org> ickle-0.3.0-r1.ebuild :
+  Added "spell" support since it now supports it. simple dependency
+update
 
 *ickle-0.3.0 (17 Apr 2002)
   17 Apr 2002; Spider <spider@gentoo.org> ickle-0.3.0.ebuild :
