--- a/x11-libs/gtkmm/ChangeLog
+++ b/x11-libs/gtkmm/ChangeLog
@@ -1,7 +1,12 @@
 # ChangeLog for x11-libs/gtkmm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkmm/ChangeLog,v 1.3 2002/04/13 08:19:10 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkmm/ChangeLog,v 1.4 2002/04/18 13:26:25 spider Exp $
 
+
+*gtkmm-1.3.11 (18 Apr 2002)
+  18 Apr 2002; Spider <spider@gentoo.org>; gtkmm-1.3.11.ebuild
+  add the development branch
+    
 *gtkmm-1.2.9 (09 Apr 2002)
   09 Apr 2002; Spider <spider@gentoo.org>; gtkmm-1.2.9.ebuild
   update to latest version. 
