--- a/net-www/skipstone/ChangeLog
+++ b/net-www/skipstone/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/skipstone
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/skipstone/ChangeLog,v 1.6 2002/03/29 14:04:00 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/skipstone/ChangeLog,v 1.7 2002/04/18 14:14:09 seemant Exp $
+
+*skipstone-0.8.1-r2 (18 Apr 2002)
+
+  18 Apr 2002; Seemant Kulleen <seemant@gentoo.org> skipstone-0.8.1-r2.ebuild :
+
+  More translation fixes.  This closes bug report #1907 reported by
+  awaschb@gwdg.de (Andreas Waschbuesch)
 
 *skipstone-0.8.1 (28 Mar 2002)
 
