--- a/net-mail/postfix/ChangeLog
+++ b/net-mail/postfix/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for net-mail/postfix
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.12 2002/04/15 23:46:06 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.13 2002/04/19 07:16:40 rphillips Exp $
 
+*postfix-1.1.7-r3 (19 Apr 2002)
+
+  19 Apr 2002; Ryan Phillips <rphillips@gentoo.org>
+  postfix-1.1.7-r3.ebuild files/digest-postfix-1.1.7-r3 :
+  Added INSTALL to dodoc statement.  Closes #1923
+  
 *postfix-1.1.7-r2 (15 Apr 2002)
 
   15 Apr 2002; Seemant Kulleen <seemant@gentoo.org>
