--- a/net-mail/postfix/ChangeLog
+++ b/net-mail/postfix/ChangeLog
@@ -1,24 +1,25 @@
 # ChangeLog for net-mail/postfix
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.13 2002/04/19 07:16:40 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.14 2002/04/19 15:56:20 woodchip Exp $
 
 *postfix-1.1.7-r3 (19 Apr 2002)
 
-  19 Apr 2002; Ryan Phillips <rphillips@gentoo.org>
-  postfix-1.1.7-r3.ebuild files/digest-postfix-1.1.7-r3 :
+  19 Apr 2002; Ryan Phillips <rphillips@gentoo.org> postfix-1.1.7-r3.ebuild,
+  files/digest-postfix-1.1.7-r3 :
+
   Added INSTALL to dodoc statement.  Closes #1923
   
 *postfix-1.1.7-r2 (15 Apr 2002)
 
-  15 Apr 2002; Seemant Kulleen <seemant@gentoo.org>
-  postfix-1.1.7-r2.ebuild files/digest-postfix-1.1.7-r2 :
+  15 Apr 2002; Seemant Kulleen <seemant@gentoo.org> postfix-1.1.7-r2.ebuild,
+  files/digest-postfix-1.1.7-r2 :
+
   Changed the USE flags from mta-ldap, mta-tls, and mta-mysql to ldap, ssl, and
   mysql respectively.  Also, changed the checks to the official use foo &&
   syntax.  This has the added advantage of showing the USE flags being used 
   during the emerge process.
 
-  11 Apr 2002; Seemant Kulleen <seemant@gentoo.org> 
-  files/digest-postfix-1.1.7-r1 :
+  11 Apr 2002; Seemant Kulleen <seemant@gentoo.org> files/digest-postfix-1.1.7-r1 :
 
   digest contains the md5 sums for the postfix tarball and the alternate
   tarball.
