--- a/app-misc/krusader/ChangeLog
+++ b/app-misc/krusader/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/krusader
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/krusader/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/krusader/ChangeLog,v 1.2 2002/04/20 08:24:31 danarmak Exp $
+
+*krusader-1.02 (20 Apr 2002)
+
+  20 Apr 2002; Dan Armak <danarmak@gentoo.org> ChangeLog :
+  
+  new (kde3) version.
+  
 
 *krusader-1.00 (1 Feb 2002)
 
