--- a/sys-apps/dcron/ChangeLog
+++ b/sys-apps/dcron/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/dcron
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dcron/ChangeLog,v 1.2 2002/03/21 21:27:35 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dcron/ChangeLog,v 1.3 2002/04/20 12:08:39 azarah Exp $
+
+  20 April 2002; Martin Schlemmer <azarah@gentoo.org> files/dcron.rc6 :
+
+  Update to NEED "logger"
 
 *dcron-2.7-r8 (21 Mar 2002)
 
