--- a/app-admin/fcron/ChangeLog
+++ b/app-admin/fcron/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/fcron
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/fcron/ChangeLog,v 1.1 2002/02/01 21:52:59 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/fcron/ChangeLog,v 1.2 2002/04/20 12:13:03 azarah Exp $
+
+  20 April 2002; Martin Schlemmer <azarah@gentoo.org> files/fcron.rc6 :
+
+  Update to NEED "logger"
 
 *fcron-2.0.0 (1 Feb 2002)
 
