New cronlayout. all the new releases are currently masked - please test. see also message on gentoo-dev

--- a/sys-apps/vcron/ChangeLog
+++ b/sys-apps/vcron/ChangeLog
@@ -1,17 +1,33 @@
 # ChangeLog for sys-apps/vcron
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/vcron/ChangeLog,v 1.2 2002/04/20 12:07:13 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/vcron/ChangeLog,v 1.3 2002/04/20 22:03:25 bangert Exp $
+
+
+*vcron-3.0.1-r1 (20 Apr 2002)
+
+  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/crontab :
+  
+  added own crontab
+  fixed path to suit /var/spool/cron/lastrun
+  added support for /etc/cron.hourly
+  
+  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> vcron-3.0.1.ebuild :
+  
+  added PROVIDE="virtual/cron" && RDEPEND="virtual/cron"
+  removed code duplication
+  install own version of /etc/crontab
+  rdepend on sys-apps/cronbase and virtual/mta
+  
+  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/vcron.rc6 :
+
+  added "provide cron"
 
   20 April 2002; Martin Schlemmer <azarah@gentoo.org> files/vcron.rc6 :
 
   Update to NEED "logger"
 
+
 *vcron-3.0.1 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
