--- a/sys-apps/dcron/ChangeLog
+++ b/sys-apps/dcron/ChangeLog
@@ -1,10 +1,25 @@
 # ChangeLog for sys-apps/dcron
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dcron/ChangeLog,v 1.3 2002/04/20 12:08:39 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dcron/ChangeLog,v 1.4 2002/04/20 22:03:25 bangert Exp $
+
+  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/crontab
+
+  fixed /var/spool/cron/lastrun
+  added support for cron.hourly
+
+  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> dcron-2.7-r8.ebuild
+  
+  add PROVIDE="virtual/cron" and RDEPEND="!virtual/cron sys-apps/cronbase"
+  added config section to activate /etc/cron.{hourly..etc}
+
+  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/cron.rc6
+  
+  add "provide cron" to use
 
   20 April 2002; Martin Schlemmer <azarah@gentoo.org> files/dcron.rc6 :
 
   Update to NEED "logger"
+
 
 *dcron-2.7-r8 (21 Mar 2002)
 
@@ -13,13 +28,3 @@
 
   Added patch from Matt Dillon to fix crontabs that begin with whitespace.
   Thanks to everybody who helped analyze this problem.
-
-*dcron-2.7-r7 (1 Feb 2002)
-
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
