--- a/kde-base/kdeartwork/ChangeLog
+++ b/kde-base/kdeartwork/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeartwork
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.2 2002/04/04 20:09:22 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.3 2002/04/20 22:14:54 rphillips Exp $
+
+*kdeartwork-3.0-r1 (18 Apr 2002)
+
+  18 Apr 2002; Ryan Phillips <rphillips@gentoo.org> kdeartwork-3.0-r1 :
+
+  Variable was overwriting the GL dependency. Fixed (#1950)
 
 *kdeartwork-3.0 (4 Apr 2002)
 
