--- a/dev-ruby/ruby-gdkimlib/ChangeLog
+++ b/dev-ruby/ruby-gdkimlib/ChangeLog
@@ -1,13 +1,20 @@
 # ChangeLog for dev-ruby/ruby-gdkimlib
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gdkimlib/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gdkimlib/ChangeLog,v 1.2 2002/04/22 01:07:15 agriffis Exp $
+
+*ruby-gdkimlib-0.27 (21 Apr 2002)
+
+	21 Apr 2002; Aron Griffis <agriffis@gentoo.org> ruby-gdkimlib-0.27.ebuild:
+
+	Updated to version 0.27
 
 *ruby-gdkimlib-0.26 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+	1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
+
+	Added initial ChangeLog which should be updated whenever the package is
+	updated in any way. This changelog is targetted to users. This means that
+	the comments should well explained and written in clean English. The
+	details about writing correct changelogs are explained in the
+	skel.ChangeLog file which you can find in the root directory of the
+	portage repository.
