--- a/dev-ruby/ruby-gtk/ChangeLog
+++ b/dev-ruby/ruby-gtk/ChangeLog
@@ -1,22 +1,30 @@
 # ChangeLog for dev-ruby/ruby-gtk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk/ChangeLog,v 1.2 2002/04/14 05:15:38 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk/ChangeLog,v 1.3 2002/04/22 01:07:15 agriffis Exp $
+
+*ruby-gtk
+
+	21 Apr 2002; Aron Griffis <agriffis@gentoo.org> ruby-gtk-0.27.ebuild:
+
+	Modified to use unified ruby-gnome-all tarball; this allows related
+	ebuilds to use the same tarball and only download once.
 
 *ruby-gtk-0.27 (13 Apr 2002)
 
-  13 Apr 2002; Seemant Kulleen <seemant@gentoo.org> ruby-gtk-0.27.ebuild :
+	13 Apr 2002; Seemant Kulleen <seemant@gentoo.org> ruby-gtk-0.27.ebuild :
 
-  thomharp@charter.net submitted this updated ebuild in bug #1647.
-  I have cleaned it up slightly to allow future updates to be more flexible.
-  However, why did the ruby-gtk (ruby-gnome) people have to change
-  the naming convention?
+	thomharp@charter.net submitted this updated ebuild in bug #1647.  I have
+	cleaned it up slightly to allow future updates to be more flexible.
+	However, why did the ruby-gtk (ruby-gnome) people have to change the
+	naming convention?
 
 *ruby-gtk-0.26 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+	1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
+
+	Added initial ChangeLog which should be updated whenever the package is
+	updated in any way. This changelog is targetted to users. This means that
+	the comments should well explained and written in clean English. The
+	details about writing correct changelogs are explained in the
+	skel.ChangeLog file which you can find in the root directory of the
+	portage repository.
