--- a/net-misc/netkit-tftp/Changelog
+++ b/net-misc/netkit-tftp/Changelog
@@ -1,7 +1,14 @@
 # ChangeLog for net-misc/netkit-tftp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-tftp/Changelog,v 1.3 2002/02/21 22:54:32 m0rpheus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-tftp/Changelog,v 1.4 2002/04/22 20:05:17 rphillips Exp $
 
+*netkit-tftp-0.17-r1 (22 Apr 2002)
+
+   22 Apr 2002; Ryan Phillips <rphillips@gentoo.org> netkit-tftp-0.17-r1.ebuild
+   
+   Patched netkit-tftp-0.17 to actually install in.tftpd and man pages.
+   Fixes (#1997)
+   
 *netkit-tftp-0.17 (18 Feb 2002)
 
    18 Feb 2002; F.Meyndert <m0rpheus@gentoo.org> netkit-tftp-0.17.ebuild,
