--- a/net-mail/sylpheed/ChangeLog
+++ b/net-mail/sylpheed/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/sylpheed
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed/ChangeLog,v 1.4 2002/04/16 01:05:15 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed/ChangeLog,v 1.5 2002/04/23 02:24:08 jnelson Exp $
+
+*sylpheed-0.7.5 (22 Apr 2002)
+
+  22 Apr 2002; Jon Nelson <jnelson@gentoo.org> sylpheed-0.7.5.ebuild:
+
+  New upstream
 
 *sylpheed-0.7.4-r1 (15 Apr 2002)
 
