--- a/kde-base/kdeartwork/ChangeLog
+++ b/kde-base/kdeartwork/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/kdeartwork
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.3 2002/04/20 22:14:54 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.4 2002/04/23 04:55:45 rphillips Exp $
+
+*kdeartwork-3.0-r1 (22 Apr 2002)
+
+  22 Apr 2002; Ryan Phillips <rphillips@gentoo.org> kdeartwork-3.0-r1 :
+
+  No version rev.  Fixed pipes.cpp to compile with nvidia headers.
+  I hope this doesn't break anything.
 
 *kdeartwork-3.0-r1 (18 Apr 2002)
 
