--- a/net-im/centericq/ChangeLog
+++ b/net-im/centericq/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-im/centericq
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/centericq/ChangeLog,v 1.2 2002/03/24 15:23:23 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/centericq/ChangeLog,v 1.3 2002/04/23 07:58:35 verwilst Exp $
+
+*centericq-4.6.9 (23 April 2002)
+
+  24 March 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
+
+  Updated to 4.6.9, and removed the old version.
 
 *centericq-4.6.5 (24 March 2002)
 
