--- a/net-mail/evolution/ChangeLog
+++ b/net-mail/evolution/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/evolution
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/evolution/ChangeLog,v 1.11 2002/04/22 19:58:40 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/evolution/ChangeLog,v 1.12 2002/04/23 13:53:06 g2boojum Exp $
+
+*evolution-1.0.3-r6 (23 Apr 2002)
+
+  23 Apr 2002; Martin Schlemmer <azarah@gentoo.org> evolution-1.0.3-r.ebuild :
+
+  Resolve bug #334.  Note: libtoolize is run only if "pda" is not in USE.
 
 *evolution-1.0.3-r5 (22 Apr 2002)
 
