--- a/media-video/xawtv/ChangeLog
+++ b/media-video/xawtv/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for media-video/xawtv
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/xawtv/ChangeLog,v 1.3 2002/04/12 20:58:30 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/xawtv/ChangeLog,v 1.4 2002/04/23 16:56:03 verwilst Exp $
 
-
+*xawtv-3.73 (23 April 2002)
+        23 April 2002; Bart Verwilst <spider@gentoo.org> Changelog:
+        
+	New version, removed old versions from the Portage tree
 
 *xawtv-3.65-r1 (30 Mar 2002)
 	11 Apr 2002; Spider <spider@gentoo.org> xawtv-3.65-r2.ebuild :
