--- a/media-libs/divx4linux/ChangeLog
+++ b/media-libs/divx4linux/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for media-libs/divx4linux
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/divx4linux/ChangeLog,v 1.1 2002/02/01 21:53:30 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/divx4linux/ChangeLog,v 1.2 2002/04/23 22:36:07 azarah Exp $
+
+*divx4linux-20020304 (23 Apr 2002)
 
 *divx4linux-20011025 (1 Feb 2002)
 
