--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.3 2002/04/12 18:48:20 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.4 2002/04/24 14:54:25 spider Exp $
+
+
+*balsa-1.2.4-r1 (24 Apr 2002)
+  24 Apr 2002; Spider <spider@gentoo.org> balsa-1.2.4-r1.ebuild balsa-1.3.4.ebuild
+  update with a patch to make it compile with spellchecking
+  add development series per request
 
 
 *balsa-1.2.4 (11 Apr 2002)
