--- a/sys-apps/quota/ChangeLog
+++ b/sys-apps/quota/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/quota
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/quota/ChangeLog,v 1.1 2002/02/01 21:53:37 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/quota/ChangeLog,v 1.2 2002/04/24 17:39:58 bangert Exp $
+
+*quota-3.04 (14 Apr 2002)
+
+  14 Apr 2002; Joachim Blaabjerg <styx@SuxOS.org> quota-3.04.ebuild
+
+  Version bump.
 
 *quota-3.03 (1 Feb 2002)
 
