--- a/dev-java/blackdown-jdk/files/blackdown-jdk-1.3.1
+++ b/dev-java/blackdown-jdk/files/blackdown-jdk-1.3.1
@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License, v2 or later
 # Author: Karl Trygve Kalleberg
 # Maintainer: Tools Team <tools@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/files/blackdown-jdk-1.3.1,v 1.4 2002/04/17 04:15:44 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/files/blackdown-jdk-1.3.1,v 1.5 2002/04/24 18:56:22 karltk Exp $
 
 VERSION="Blackdown JDK @PV@"
 JAVA_HOME=/opt/@P@
@@ -10,5 +10,5 @@ CLASSPATH=/opt/@P@/lib/rt.jar
 JDK_HOME=/opt/@P@
 JAVAC=${JAVA_HOME}/bin/javac
 ADDPATH="${JAVA_HOME}/bin:${JAVA_HOME}/jre/bin"
-ADDLDPATH="/opt/@P@/jre/lib/"
+ADDLDPATH="/opt/@P@/jre/lib/i386/:/opt/@P@/jre/lib/i386/native_threads/"
 ENV_VARS="JAVA_HOME CLASSPATH JDK_HOME JAVAC ADDPATH ADDLDPATH"
