--- a/net-www/opera/ChangeLog
+++ b/net-www/opera/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/opera
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/opera/ChangeLog,v 1.5 2002/04/18 21:14:56 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/opera/ChangeLog,v 1.6 2002/04/24 18:57:08 seemant Exp $
+
+*opera-6.0_pre4-r3 (24 Apr 2002)
+
+  24 Apr 2002; Seemant Kulleen <seemant@gentoo.org> opera-6.0_pre4-r3.ebuild 
+  files/digest-opera-6.0_pre4-r2 :
+
+
 
 *opera-6.0_pre4-r2 (18 Apr 2002)
 
