--- a/dev-lang/hugs98/ChangeLog
+++ b/dev-lang/hugs98/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for dev-lang/hugs98
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/hugs98/ChangeLog,v 1.1 2002/04/24 19:43:15 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/hugs98/ChangeLog,v 1.2 2002/04/24 19:45:33 karltk Exp $
 
-*hugs98-12.2000 (24 Apr 2002)
+*hugs98-2000.12 (24 Apr 2002)
 
-  24 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> hugs98-12.2000.ebuild files/digest-hugs98-12.2002 :
+  24 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> hugs98-2000.12.ebuild files/digest-hugs98-2000.12 :
   
   Hugs 98 is a functional programming system based on Haskell 98, the de facto
   standard for non-strict functional programming languages. Hugs 98 provides 
