--- a/dev-java/sun-jdk/files/sun-jdk-1.3.1
+++ b/dev-java/sun-jdk/files/sun-jdk-1.3.1
@@ -2,13 +2,14 @@
 # Distributed under the terms of the GNU General Public License, v2 or later
 # Author: Karl Trygve Kalleberg
 # Maintainer: Tools Team <tools@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/files/sun-jdk-1.3.1,v 1.3 2002/04/09 22:13:41 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/files/sun-jdk-1.3.1,v 1.4 2002/04/24 20:03:49 karltk Exp $
 
 VERSION="Sun JDK @PV@"
 JAVA_HOME=/opt/@P@
 CLASSPATH=/opt/@P@/lib/rt.jar
 JDK_HOME=/opt/@P@
 JAVAC=${JAVA_HOME}/bin/javac
+LD_ASSUME_KERNEL=2.2.5
 ADDPATH="${JAVA_HOME}/bin:${JAVA_HOME}/jre/bin"
 ADDLDPATH="/opt/@P@/jre/lib/"
 
