--- a/media-video/avifile/ChangeLog
+++ b/media-video/avifile/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-video/avifile
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.9 2002/04/14 02:44:36 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.10 2002/04/24 21:09:12 seemant Exp $
+
+avifile-0.7.3.20020419 (24 Apr 2002)
+
+  24 Apr 2002; Seemant Kulleen <seemant@gentoo.org> avifile-0.7.3.20020419.ebuild
+  files/digest-avifile-0.7.3.20020419 :
+
+  Version bump to newest snapshot.  This should work with the latest 
+  divx4linux and now has ffmpeg compiled as default.  And they have actually
+  named this thing consistent with the 0.6 series!
 
 avifile-0.6.0.20011220-r2 (13 Apr 2002) 
 
