--- a/net-www/mozilla/ChangeLog
+++ b/net-www/mozilla/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-www/mozilla
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.9 2002/04/13 04:08:25 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.10 2002/04/24 22:26:41 azarah Exp $
+
+  24 Apr 2002; M.Schlemmer <azarah@gentoo.org> :
+
+  Slotted the latest ones.
 
   13 Apr 2002; M.Schlemmer <azarah@gentoo.org> mozilla-0.9.9-r[12].ebuild :
 
