--- a/net-analyzer/netleds_applet/ChangeLog
+++ b/net-analyzer/netleds_applet/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/netleds_applet
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netleds_applet/ChangeLog,v 1.1 2002/02/01 21:53:31 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netleds_applet/ChangeLog,v 1.2 2002/04/25 01:00:13 seemant Exp $
+
+*netleds_applet-0.9.1-r2 (24 Apr 2002)
+
+  24 Apr 2002; Seemant Kulleen <seemant@gentoo.org> netleds_applet-0.9.1-r2.ebuild files/digest-netleds_applet-0.9.1-r2 :
+
+  fixed sandbox violation error for a config file going into /etc/CORBA/servers.
 
 *netleds_applet-0.9.1-r1 (1 Feb 2002)
 
