--- a/net-mail/tmda/ChangeLog
+++ b/net-mail/tmda/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/tmda
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/tmda/ChangeLog,v 1.8 2002/04/04 00:02:40 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/tmda/ChangeLog,v 1.9 2002/04/25 03:58:24 agenkin Exp $
+
+*tmda-0.51 ( 24 Apr 2002 )
+
+  24 Apr 2002; Arcady Genkin <agenkin@thpoon.com> tmda-0.52.ebuild :
+
+  Version 0.52 is released.
+  This is a bugfix release, so everybody should upgrade.
 
 *tmda-0.51 ( 3 Apr 2002 )
 
