--- a/net-misc/dc-gui/ChangeLog
+++ b/net-misc/dc-gui/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/dc-gui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dc-gui/ChangeLog,v 1.2 2002/04/22 18:31:04 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dc-gui/ChangeLog,v 1.3 2002/04/25 06:26:48 mkennedy Exp $
+
+*dc-gui-0.54 (24 Apr 2002)
+
+  24 Apr 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
+  dc-gui-0.54.ebuild :
+
+  --without-gnome doesn't work. So made gnome a dependency.
 
 *dc-gui-0.54 (22 Apr 2002)
 
