--- a/x11-wm/xfce/ChangeLog
+++ b/x11-wm/xfce/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/xfce
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xfce/ChangeLog,v 1.7 2002/04/08 06:31:18 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xfce/ChangeLog,v 1.8 2002/04/25 15:12:15 g2boojum Exp $
+
+*xfce-3.8.16 (25 Apr 2002)
+
+  25 Apr 2002; Grant Goodyear <g2boojum@gentoo.org> xfce-3.8.16.ebuild :
+
+  New version.
 
   8 Apr 2002; M.Schlemmer <azarah@gentoo.org> files/xfce :
 
