--- a/net-www/htdig/ChangeLog
+++ b/net-www/htdig/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/htdig
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/htdig/ChangeLog,v 1.5 2002/04/24 18:59:23 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/htdig/ChangeLog,v 1.6 2002/04/25 16:14:55 seemant Exp $
+
+*htdig-3.1.6-r2 (25 Apr 2002)
+
+  25 Apr 2002; Seemant Kulleen <seemant@gentoo.org> htdig-3.1.6-r2.ebuild
+  files/digest-htdig-3.1.6-r2 :
+
+  More fixes from StuBear to place things in correct locations.
 
 *htdig-3.1.6-r1 (22 Apr 2002)
 
