--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.10 2002/04/25 19:12:47 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.11 2002/04/25 21:11:42 seemant Exp $
+
+*gaim-0.56-r2 (25 Apr 2002)
+
+  25 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.56-r2.ebuild :
+
+  Bundled gdk-pixbuf dependency with gnome flag for now.  Thanks to
+  punkball@ccs.neu.edu (James Dennis) in bug #2103 for this.
 
 *gaim-0.56-r1 (25 Apr 2002)
 
