--- a/net-mail/mutt/ChangeLog
+++ b/net-mail/mutt/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/mutt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mutt/ChangeLog,v 1.2 2002/03/21 16:27:10 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mutt/ChangeLog,v 1.3 2002/04/26 00:11:56 rphillips Exp $
+
+*mutt-1.3.28-r1 (25 Apr 2002)
+
+  25 Apr 2002; Ryan Phillips <rphillips@gentoo.org> mutt-1.3.28-r1.ebuild :
+
+  Mutt couldn't fcntl() the ~/Mail directory on a NFS volume.  Changed
+  ebuild to enable flock() support per bug #2005.
 
 *mutt-1.3.28 (21 Mar 2002)
 
