--- a/app-office/koffice/ChangeLog
+++ b/app-office/koffice/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-office/koffice
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice/ChangeLog,v 1.2 2002/04/02 18:44:38 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice/ChangeLog,v 1.3 2002/04/26 06:45:15 verwilst Exp $
+
+*koffice-1.2_beta1 (26 April 2002)
+
+  26 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
+
+  First beta released! Since i'm a kde packager now, much more
+  post-beta1 bugs have been patched, and the package is much more tested
+  than the other previous koffice releases.. Enjoy! 
 
 *koffice-1.2_pre20020402 (2 April 2002)
 
