--- a/dev-util/cvs/ChangeLog
+++ b/dev-util/cvs/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-util/cvs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cvs/ChangeLog,v 1.2 2002/03/16 10:09:49 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cvs/ChangeLog,v 1.3 2002/04/26 06:49:28 agenkin Exp $
+
+*cvs-1.11.2 (26 Apr 2002)
+
+  26 Apr 2002; Arcady Genkin <agenkin@thpoon.com> cvs-1.11.2.ebuild :
+
+  Updated to version 1.11.2
+  Changed download URI to use HTTP instead of FTP, b/c the ftp server of 
+  cvshome.org seems flaky.
 
 *cvs-1.11.1_p1 (16 Mar 2002)
 
