--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.11 2002/04/25 21:11:42 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.12 2002/04/26 08:42:56 seemant Exp $
+
+*gaim-0.57 (26 Apr 2002)
+
+  26 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.57.ebuild
+  files/digest-gaim-0.57 :
+
+  Version bump.
 
 *gaim-0.56-r2 (25 Apr 2002)
 
