--- a/dev-java/blackdown-jre/ChangeLog
+++ b/dev-java/blackdown-jre/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/blackdown-jre
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jre/ChangeLog,v 1.3 2002/04/09 21:58:31 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jre/ChangeLog,v 1.4 2002/04/27 12:22:42 pvdabeel Exp $
+
+*blackdown-jre-1.3.1-r7 (27 Apr 2002) 
+
+  27 Apr 2002; pvdabeel <pvdabeel@gentoo.org>
+
+  PPC(/sparc) compatible ebuild
 
 *blackdown-jre-1.3.1-r6 (09 Apr 2002)
 
