--- a/net-news/leafnode/ChangeLog
+++ b/net-news/leafnode/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-news/leafnode
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/net-news/leafnode/ChangeLog,v 1.1 2002/02/01 21:52:59 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/net-news/leafnode/ChangeLog,v 1.4 2002/04/27 23:34:20 bangert Exp $
 
 *leafnode-1.9.22 (23 Apr 2002)
 
