--- a/sys-apps/stat/ChangeLog
+++ b/sys-apps/stat/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/skel.ChangeLog,v 1.2 2002/02/05 00:57:47 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/stat/ChangeLog,v 1.2 2002/04/27 23:34:20 bangert Exp $
 
 *stat-2.5 (2002-02-08)
 
