--- a/x11-libs/gtk-thinice-engine/ChangeLog
+++ b/x11-libs/gtk-thinice-engine/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for x11-libs/gtk-thinice-engine
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/x11-libs/gtk-thinice-theme/ChangeLog,v 1.1 2002/02/01 21:53:38 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-thinice-engine/ChangeLog,v 1.2 2002/04/27 23:34:20 bangert Exp $
 
 *gtk-thinice-engine-2.0.0 (Mar 20 2002)
 	First attempt at an ebuild
